--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,13 @@
             </fieldset>
         </form>
 
-     <div id="message"></div>
+
+        <table id="products"></table>
+
+        <div class="item">
+            <div class="cart"></div>
+        </div>
+
 
     </div>
 
@@ -56,6 +62,7 @@
     <!-- load Javascript -->
     <script src="/static/js/handlebars-v4.1.2.js"></script>
     <script src="/static/js/jquery-3.4.0.js"></script>
+    <script src="/static/js/model.js"></script>
     <script src="/static/js/script.js"></script>
 
 </body>
