--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,15 @@
 html {
-    background-color: blue;
+    background-color: ghostwhite;
 }
 
 body {
     margin: 0;
+}
+
+/*all images*/
+img {
+    width: 70%;
+    height: auto;
 }
 
 .content {
@@ -14,26 +20,32 @@ body {
     padding: 20px;
 }
 
-#message {
-    width: 60%;
-    margin: auto;
-    padding: 10px;
-    background-color: white;
-    text-align: center;
-    font-size: 20pt;
-    font-family: fixed;
-}
-
-.banner {
+.header {
     font-family: cursive, sans-serif;
     text-align: center;
     background-color: #ffcc33;
     margin: 0;
     padding: 10px;
     height: 80px;
+}
+
+.header h1 {
+    font-size: 15px;
+}
+
+.footer {
+    font-family: cursive, sans-serif;
+    text-align: center;
+    background-color: #ffcc33;
+    margin: 0;
+    padding: 10px;
+    height: 80px;
+}
+
+.content {
 
 }
 
-#products {
-    /*text-decoration: underline;*/
+.item {
+    float: right;
 }
