--- a/views/index.html
+++ b/views/index.html
@@ -7,55 +7,23 @@
 </head>
 <body>
 
-    <header class="banner">
-        <h1>The WT</h1>
-    </header>
+    <header class="header"></header>
+
 
     <div class="content">
-
-        <p>These URLs return JSON responses:</p>
-        <ul>
-            <li><a href="/products">List of Products</a></li>
-            <li><a href="/cart">Contents of Cart</a></li>
-        </ul>
-
-        <p></p>
-
-        <form action="/cart" method="post">
-            <fieldset>
-                <legend>This form will add to the cart with a given product id</legend>
-                <ul>
-                    <li>Product: <input type="number" name="productid"></li>
-                    <li>Quantity: <input type="number" name="quantity"></li>
-                    <li><input type="submit"></li>
-                </ul>
-                <input type="hidden" name="update" value="0">
-            </fieldset>
-        </form>
-
-        <form action="/cart" method="post">
-            <fieldset>
-                <legend>This form will update the cart with a given product id, or remove if quantity=0</legend>
-                <ul>
-                    <li>Product: <input type="number" name="productid"></li>
-                    <li>Quantity: <input type="number" name="quantity"></li>
-                    <li><input type="submit"></li>
-                </ul>
-                <input type="hidden" name="update" value="1">
-            </fieldset>
-        </form>
-
 
         <table id="products"></table>
 
         <div class="item">
-            <div class="cart"></div>
+
         </div>
+
+
 
 
     </div>
 
-    <footer class="banner">
+    <footer class="footer">
         <p>Copyright &copy; 2019 COMP249 Web Technology</p>
     </footer>
 
