--- a/views/shop.html
+++ b/views/shop.html
@@ -11,10 +11,30 @@
         <h1>The WT</h1>
     </header>
 
-    <div class="content">
-          <ul id="products"></ul>
+        <form action="/cart" method="post">
+            <fieldset>
+                <legend>This form will add to the cart with a given product id</legend>
+                <ul>
+                    <li>Product: <input type="number" name="productid"></li>
+                    <li>Quantity: <input type="number" name="quantity"></li>
+                    <li><input type="submit"></li>
+                </ul>
+                <input type="hidden" name="update" value="0">
+            </fieldset>
+        </form>
 
-        <div id="text"></div>
+        <form action="/cart" method="post">
+            <fieldset>
+                <legend>This form will update the cart with a given product id, or remove if quantity=0</legend>
+                <ul>
+                    <li>Product: <input type="number" name="productid"></li>
+                    <li>Quantity: <input type="number" name="quantity"></li>
+                    <li><input type="submit"></li>
+                </ul>
+                <input type="hidden" name="update" value="1">
+            </fieldset>
+        </form>
+
 
     </div>
 
