--- a/views/index.html
+++ b/views/index.html
@@ -7,30 +7,28 @@
 </head>
 <body>
 
-    <header class=header></header>
+    <header class="header"></header>
 
 
     <div class="content">
 
         <div id="products"></div>
 
-        <div class="item">
-
-        </div>
+        <div class="item"></div>
     </div>
 
     <script id="carttemplate" type="x-handlebars-template">
         <h1>The WT</h1>
         <ul>
-            <li><h2 class="cart">Your Cart: {{length}} items, ${{sum}}</h2></li>
+            <li><h2>Your Cart: {{length}} items, ${{sum}}</h2></li>
             <li><button class="cart">Show Cart</button></li>
         </ul>
     </script>
 
     <script id="productstemplate" type="x-handlebars-template">
-    <table>
+    <table id="productstable">
         <thead>
-            <tr><th>Product</th><th>Cost</th></tr>
+        <tr><th><a class="ProdTableHead" data-product={{id}}>Product</a></th><th><a id="CostTableHead">Cost</a></th></tr>
         </thead>
         <tbody>
         {{#each products}}
@@ -47,13 +45,13 @@
         <button class="close">Close</button>
         <h2>{{name}}</h2>
         <div><img src={{image_url}}></div>
-        <div class="info">{{inventory}} in stock</div>
-        <div class="info">${{unit_cost}}</div>
         <div class="info">{{description}}</div>
+        <br><div class="info">${{unit_cost}}</div>
+        <div class="info">{{inventory}} in stock</div>
 
         <form id="cartform">
-            Quantity: <input type="number" name="quantity" value="1">
-            <input type="submit" value="Add to Cart">
+            Quantity: <input class="quantity" type="number" name="quantity" value="1">
+            <input class="addcart" type="submit" value="Add to Cart">
             <input type="hidden" name="productid" value={{id}}>
         </form>
     </script>
@@ -68,14 +66,13 @@
         <tr>
             <td class="info">{{name}}</td>
             <td class="info">${{cost}}</td>
-            <td class="info"> <form id="modcartform">
-            <input type="number" name="quantity" value={{quantity}}>
-            <input type="submit" value="Update Cart">
+            <td class="info"> <form class="modcartform">
+            <input class="quantity" type="number" name="quantity" value={{quantity}}>
+            <input class="addcart" type="submit" value="Update & Close Cart">
             <input type="hidden" name="productid" value={{id}}>
             </form></td>
         </tr>
         {{/each}}
-
 
         <tr><td class="info">Total: ${{sum}}</td></tr>
         </tbody>
